--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
         "dev:webpack": "next dev --hostname 0.0.0.0 --port 3000",
         "build": "next build",
         "start": "next start",
-        "seed": "node scripts/seed-discover.js"
+        "seed": "node scripts/seed-discover.js",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:ui": "vitest --ui",
+        "test:e2e": "playwright test",
+        "test:e2e:ui": "playwright test --ui",
+        "test:all": "npm run test && npm run test:e2e"
     },
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
@@ -67,10 +73,18 @@
         "zod": "^3.25.67"
     },
     "devDependencies": {
+        "@playwright/test": "^1.57.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.1",
+        "@vitejs/plugin-react": "^5.1.2",
+        "@vitest/ui": "^4.0.16",
         "autoprefixer": "^10.4.19",
         "globals": "^16.2.0",
+        "jsdom": "^27.4.0",
+        "playwright": "^1.57.0",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1"
+        "tailwindcss": "^3.4.1",
+        "vitest": "^4.0.16"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
