--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,34 @@
-﻿# Auto-normalize line endings for all text files
-* text=auto
+﻿# Normalize all text files and store them as LF in repo
+* text=auto eol=lf
 
-# Ensure these files always have LF endings (even on Windows)
-*.js text eol=lf
-*.jsx text eol=lf
-*.ts text eol=lf
-*.tsx text eol=lf
+# JavaScript / TypeScript
+*.js   text eol=lf
+*.jsx  text eol=lf
+*.ts   text eol=lf
+*.tsx  text eol=lf
+
+# Config / data
 *.json text eol=lf
-*.css text eol=lf
-*.md text eol=lf
+*.yml  text eol=lf
+*.yaml text eol=lf
+*.env  text eol=lf
+
+# Styles
+*.css  text eol=lf
+*.scss text eol=lf
+
+# Docs
+*.md   text eol=lf
+
+# Shell scripts
+*.sh   text eol=lf
+
+# Explicit binaries (never normalize)
+*.png  binary
+*.jpg  binary
+*.jpeg binary
+*.gif  binary
+*.webp binary
+*.ico  binary
+*.pdf  binary
+*.zip  binary
