--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "test:all": "npm run test && npm run test:e2e"
     },
     "dependencies": {
+        "@auth/mongodb-adapter": "^3.11.1",
         "@hookform/resolvers": "^5.1.1",
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -58,6 +59,7 @@
         "lucide-react": "^0.516.0",
         "mongodb": "^6.6.0",
         "next": "14.2.3",
+        "next-auth": "^5.0.0-beta.30",
         "next-themes": "^0.4.6",
         "react": "^18",
         "react-day-picker": "^9.7.0",
